apiden kur bilgisi alındı, frontende yazdırıldı

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             // karşıdan data içinde rate değeri geldi, ve yüzdelikli halde inner texte yazıldı
             //`${}  `  bu kullanım text içine değer atmak için kullanılır.(rate.toFixed(2) + " ₺";) ile aynı işe yarar. yani string toplama
-            document.getElementById("rate").innerText=`${data.rate.toFixed(2)}TL`;
+            document.getElementById("rate").innerText=`${data.rate.toFixed(2)}`;
           // karşıdan data içinde date değeri geldi, ve   inner texte yazıldı
             document.getElementById("date").innerText=data.date;
 
